--- a/src/usr_06.tex
+++ b/src/usr_06.tex
@@ -36,6 +36,7 @@ If you want syntax highlighting only in the GUI version, put the "\verb!:syntax 
 
 There can be a number of reasons why you don't see colors:
 \begin{description}
+		% Find other lists like this. This is thw way to format this.
 				\item [Your terminal does not support colors.]
 								Vim will use bold, italic and underlined text, but this doesn't look very nice.
 								You probably will want to try to get a terminal with colors.
@@ -81,9 +82,9 @@ There can be a number of reasons why you don't see colors:
 								\begin{Verbatim}[samepage=true]
 		 # vim: syntax=make
 
-		You might know how to detect the file type yourself.
 								\end{Verbatim}
 
+								You might know how to detect the file type yourself.
 								Often the file name extension (after the dot) can be used.
 								See |\verb!:h new-filetype!| for how to tell Vim to detect that file type.
 
@@ -100,7 +101,7 @@ Or the colors could be wrong:
 								(or another dark color) it will use light colors for text.  If it is
 								white (or another light color) it will use dark colors for text.  If
 								Vim guessed wrong the text will be hard to read.  To solve this, set
-								the 'background' option.  For a dark background:
+								the `background' option.  For a dark background:
 
 								\begin{Verbatim}[samepage=true]
 		 :set background=dark
@@ -113,7 +114,7 @@ Or the colors could be wrong:
 												\end{Verbatim}
 
 								Make sure you put this \emph{before} the "\verb!:syntax enable!" command, otherwise the colors will already have been set.
-								You could do ":syntax reset" after setting 'background' to make Vim set the default colors again.
+								You could do "\verb!:syntax reset!" after setting `background' to make Vim set the default colors again.
 
 				\item [The colors are wrong when scrolling bottom to top.]
 								Vim doesn't read the whole file to parse the text.
@@ -137,7 +138,7 @@ You can also type the command:
  :colorscheme evening
  \end{Verbatim}
 
-"vening" is the name of the color scheme.
+"evening" is the name of the color scheme.
 There are several others you might want to try out.
 Look in the directory \verb!$VIMRUNTIME/colors!.
 
@@ -181,7 +182,7 @@ This is how you do it:
 								For details see the |\verb!:h :highlight!| command.
 
 				\item Tell Vim to always use your color scheme.
-								Put this line in your \verb!YXXYvimrc!:
+								Put this line in your |\verb!:h vimrc!|:
 
 								\begin{Verbatim}[samepage=true]
  colorscheme mine
@@ -227,7 +228,7 @@ If you want syntax highlighting only for specific files, use this:
  \end{Verbatim}
 
 This will enable the syntax highlighting, but not switch it on automatically when starting to edit a buffer.
-To switch highlighting on for the current buffer, set the 'syntax' option:
+To switch highlighting on for the current buffer, set the `syntax' option:
 
  \begin{Verbatim}[samepage=true]
  :set syntax=ON
@@ -247,10 +248,10 @@ But when you use a dark background the colors will be adjusted to look good on w
 
 There are several options that change the way Vim prints:
 \begin{itemize}
-				\item 'printdevice'
-				\item 'printheader'
-				\item 'printfont'
-				\item 'printoptions'
+				\item `printdevice'
+				\item `printheader'
+				\item `printfont'
+				\item `printoptions'
 \end{itemize}
 
 To print only a range of lines, use Visual mode to select the lines and then type the command:
